# Viewer_For_Database

./: CMakeLists.txt
Randomized_Database/: CMakeLists.txt  main.cpp  randomizeddatabase.cpp  randomizeddatabase.h  randomwindow.cpp  randomwindow.h  randomwindow.ui
Results_Table_View/: CMakeLists.txt  CollectionFromIniLoader.cpp  CollectionFromIniLoader.h  CollectionFromJsonLoader.cpp  CollectionFromJsonLoader.h  CollectionToIniSaver.cpp  CollectionToIniSaver.h  CollectionToJsonSaver.cpp  CollectionToJsonSaver.h  ICollection.cpp  ICollection.h  ICollectionLoader.cpp  ICollectionLoader.h  ICollectionSaver.cpp  ICollectionSaver.h  doc.docx  english.qm  english.ts  lineeditextended.cpp  lineeditextended.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myapp.rc  newmodel.cpp  newmodel.h  pdfprintsupport.cpp  pdfprintsupport.h  printcombobox.cpp  printcombobox.h  printcontroller.cpp  printcontroller.h  printdialog.cpp  printdialog.h  printdialog.ui  printdialogitemmodel.cpp  printdialogitemmodel.h  printdialogtableview.cpp  printdialogtableview.h  (+28 more)
projects/: translations_helper.cmake
